<resources>
    <string name="app_name">Taekwondo</string>
    <string name="title_activity_landing">landingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ajustes</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="fuentetitulo">Arial</string>
    <string name="entrar">Acceder</string>
    <string name="entrarcomoinvitado">Entrar como invitado</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvidar">Olvidé mi password</string>
    <string name="recuperar">Recuperar mi cuenta</string>
    <string name="email">Email: </string>
    <string name="pass">Contraseña:</string>
    <string name="bienvenida">B I E N V E N I D @ </string>
    <string name="bienvenida1">. . . a la primera aplicación de Taekwondo, creado por taekwondistas para taekwondistas.</string>
    <string name="bienvenida2">¡ Te encantará !</string>
    <string name="federacion">Federaciones</string>
    <string name="federacion1">Taekwondo Mundial</string>
    <string name="federaciontexto1">\n El Taekwondo Mundial es la institución que se dedica a regular las normas del taekwondo a nivel competitivo, así como de celebrar periódicamente competiciones y eventos en cada una
            de sus disciplinas.\n
            Es reconocida por el Comité Olímpico Internacional. Tiene su sede en la ciudad de Seúl (Corea del Sur).\n
            En el último estudio, cobtaba con la afiliación de 206 federaciones nacionales (de los cinco continentes), siendo una de las mayores federaciones del mundo en cuanto a miembros nacionales afiliados.
            El volumen de practicantes es entorno a los 73 millones.\n\n
            Hasta la fecha se conocía como Federación Mundial de Taekwondo, pero debido a que WTF son las siglas en inglés de la expresión "What the fuck?", y cuyo uso se volvió muy popular en redes sociales para expresar
            sorpresa. Debido a tal hecho, la Federación Mundial de Taekwondo decidió cambiar en junio de 2017 sus siglas, pasando a denominarse Taekwondo Mundial, en inglés World Taekwondo (siglas: WT).</string>
    <string name="federacion2">Union Europea Taekwondo</string>
    <string name="federaciontexto2">\n La Union Europea Taekwondo es la institución que se dedica a regular las normas del taekwondo en Europa, así como de celebrar periódicamente
            competiciones y eventos en cada una de sus disciplinas. \n
            Es una de las cinco organizaciones continentales que componen el Taekwondo Mundial (WT).</string>
    <string name="federacion3">Federacion Espanola Taekwondo</string>
    <string name="federaciontexto3">\n Dentro de la Unión Europea del Taekwondo, se enceuntra la Federación Española de Taekwondo, compuesta de: Federación Andaluza, Federación Aragonesa, Federación Asturiana, Federación Balear
            Federación Canaria, Federación Cántabra, Federación Castellano Leonesa, Federación Castellano-Manchega, Federación Catalana, Federación Ceutí, Federación de Euskadi, Federación Estremeña, Federación Gallega,
            Federación Madrileña, Federación Murciana, Federación Navarra, Federación Riojana y Federación Valenciana. </string>
    <string name="reglamento">Reglamento</string>
    <string name="botonreglamento">Descargar Reglamento Arbitraje</string>
    <string name="reglamentoTexto">\n A continuación puede desacargarse el regalmento de arbitajre de la Federación Española de Taekwondo (actualizado a 11 de Marzo de 2017)</string>
    <string name="reglamentoTexto2">\n Una vez descargado, podrá visualizarlo sin entrar en la aplicación, desde su "memoria interna del movil", la carpeta "TAE".</string>
    <string name="historia">Historia</string>
    <string name="historia1">Los antepasados de lo que actualemnte es Corea, se organizaban en tribus, dónde se localizan incidios de artes marciales debido a pinturas y murales.\n\n
            Comenzaron con danzas y ritos religioso, pero debían defenderse contra otras tribus, por lo que incorporaron movimietos copiados de los animales.\n\n
            En la actual corea del sur, en la dinastía Sil-la, se sabe de unos guerreros especializados por su disciplina y ferocidad, los cuales conquistaron diversos reinos. Destacaban las artes marciales Tae Kyon y Tang Su Do.\n\n
            En 1910 tras la invasión de los japoneses, quedó prohibida la práctica de manifestaciones culturales y deportivas no japoneses (apesa r de que practicaban en las familias a escondidas).\n\n
            En 1945, tras finalizar la segunda guerra mundial, y a pesar de la influencia del Karate durante 35años, se rinició la práctica de Tae Kyon y Tang Su Do.\n\n
            Finalemnte, Choi Hong Hee, un militar coreano, adiestró a los soldados en diferentes artes marciales. En 1955, nació el Taekwondo (el camino de los pies y de los puños), combinando lo mejor de distintas artes marciales.\n\n
            En 1966 se fundó la ITF(International Taekwondo Federation y en 1970 la WTF (World Taekwondo Federation). El estilo W.T.F. continúo si estilo de combate, pero se cambiaron algunas técnicas por creerse influenciadas por el Kárate.\n\n
            En 1994, el Taekwondo fue aceptado como deporte olímpico, para los juegos olímpicos de Sydney.
            </string>
    <string name="historia2">¿Pero qué es el Taekwondo? \n \n
            Es una técnica de movimientos corporales con la máxima potencia, equilibro, velocidad y precisión.\n
            Es un deporte, es una forma de vida para sus practicantes, es una disciplina mental y corporal. \n
            </string>
    <string name="sobrenosotros">Sobre nosotros</string>
    <string name="sobrenosotros1">Si estás leyendo esto, es porque eres tan entusiasta como nosotros de este arte marcial... :)\n\n
        Somos Jessi y David, dos estudiantes de 2º grado superior, Desarrollo de Aplicaciones Multiplataformar, también conocido como DAM.\n\n
        Este proyecto ha sido creado sin ánimo de lucro, con material propio, tanto imágenes y textos, basados en conocimientos adquiridos como deportista desde hace más de 10 años .\n\n
        Nos hemos dedicido a crear está APP tras encoentrar un agujero en la falta de aplicaciones de este arte marcial, el Taekwondo.
        Esperemos que os guste, y os sirva de utildad. Tenéis una comunidad a vuestra disposición para poder mejorarla.</string>
    <string name="saludo">Saludo</string>
    <string name="saludo1">El saludo es una demostración de respeto al maestro y al resto de nuestros compañeros. El saludo no debe ser solo un gesto vacío. A fuerza de repetirlo una y otra vez esta
     manifestación de respeto se convierte en un gesto espontáneo y sincero que se expresa de corazón y que enriquece la vida tanto de quién lo da como de quien lo recibe.</string>
    <string name="saludo2">Es tal la importancia del saludo y su significado, que en el curso de una sola clase, este ritual se repite un gran número de veces:\n
    - Antes de entrar al Dojang. Se pide permiso para entrar al Maestro o cinturón de mayor grado, y se saluda.\n
    - Al comenzar la clase. El alumno de mayor grado dirije el protocolo correspondiente.\n
    - Durante la clase. Cuando se recibe un material de entrenamiento y al finalizar el entrenamiento con un compañero.\n
    - Al finalizar la clase. El alumno de mayor grado dirige el protocolo correspondiente.\n
    - Antes de salir del Dojang. Se saluda mirando al Dojang.\n</string>
    <string name="ponercinturon">Colocar cinturon</string>
    <string name="ponercinturon1">1- Coloque sobre el ombligo una lado de la punta del cinturon.\n\n
2- Agarre dicha punta del cinturón a nivel del ombligo, y de la vuelta con el otro lado del cinturón alrededor de su cadera.\n\n
3- Con el cinturon sobrante, envuelvalo alrededor de su cintura.\n\n
4- Paselo por encima el primer extremo.\n\n
5- La punta del cinturón que queda hacia fuera, la colocamos hacia dentro, por debajo del doblez del cinturón y luego hacia arriba. \n\n
6- Preparamos dobleada la punta inferior del cintron.\n\n
7- Colocamos doblada hacia abajo la punta superior del cinturón.\n\n
8- Con las dos puntas del cinturon, realizamos un nudo, en direccion de arriba hacia abajo. Lo ajustamos.\n\n
9- Coprobamos que las partes que quedas de las puntas son iguales de largas a ambos lados.\n</string>
    <string name="nivelcituron">Niveles cinturón</string>
    <string name="nivelcituron1">Los grados en Taekwondo se dividen en KUP, PUM y DAN. En España, existen 11 grados KUP, los más básicos. Siguen una numeración inversa al nivel del alumno,
        cada grado está representado por un color de cinturón -Ti- con un significado simbólico. \n\n
    En el caso del KUP, los cinturones son blanco (11º KUP), blanco-amarillo (10º KUP), amarillo (9º KUP), amarillo-naranja (8º KUP), naranja (7º KUP), naranja-verde (6º KUP), verde (5º KUP),
        verde-azul (4º KUP), azul (3º KUP), azul-rojo (2º KUP), rojo/marrón (1º KUP), rojo-negro (1º KUM), y negro (1º DAN).\n\n
        Los grados intermedios (de dos colores) sólo se otorgan a practicantes menores de 14 años.</string>
    <string name="frases">Frases</string>
    <string name="frase1">El verdadero cinturón negro es aquel cinturón blanco que jamás se dio por vencido.</string>
    <string name="frase2">En el Taekwondo, caerse está permitido, levantarse es obligatorio</string>
    <string name="terminologiabasica">Términos básicos</string>
    <string name="terminologiabasica1">\n Sus 5 principios: Estoicismo, Valentia, Paciencia, Humildad, Cortesia \n\n Sabomin: maestro \n Dochang: lugar de entrenamiento \n Dobok: Traje de Taekwondo \n Ti: cinturon\n
            Kiorugui: combate \n Chumbi: preparación \n Bon Kiorugui: combate preparado\n Duiro Dora: media vuelta \n Kihap: grito (Ki-Energía/Hap-Aire\n Tea Guk Chag: grandeza y eternidad\n Pumse: defensas y ataques combinados\n
            Are: zona baja del cuerpo \n Momotong: zona media del cuerpo \n Olgul: Zona alta del cuerpo</string>
    <string name="terminologiacompeticion">Competición</string>
    <string name="terminologiacompeticion1">\n Chariot: firmes, posicion de saludo \n Kionye: Saludo \n Chumbi: preparación \n Sichak: empezar \n Kesok: continuar\n Kalio:separarse \n Kumna: final \n Jogu: peto \n
            Chong: azul \n Hong: rojo \n Sung: vencedor \n Juecho: asalto \n Kiongo: medio punto menos \n Kamchum: un punto menos \n Cha Yan Gu: cara a craççara</string>
    <string name="terminologianumeros">Números</string>
    <string name="terminologianumeros1">\n 1 - Jana \n 2 - Dul \n 3 - Set \n 4 - Net \n 5 - Dasot \n 6 - Yosot \n 7 - Ilgop \n 8 - Yodol \n 9 - Ajop \n 10 - Yul \n 11 - Yul Jana \n 12 - Yul Dul \n ... \n 20 - Sumul </string>
    <string name="terminologianumeros2">\n 1º - Il \n 2º - I \n 3º - Sam \n 4º - Sa \n 5º - Oh \n 6º - Youk \n 7º - Child \n 8º - Pal \n 9º - Gu \n 10º - Sib </string>
    <string name="titulopatadaazul">Patadas</string>
    <string name="nombrepatadaazul1">Nacko Chagui</string>
    <string name="patadaazul1">\n
            Patada en gancho.\n
            Lanza el pie que golpea en arco, paralelo al suelo. Golpe con el talón del pie. </string>
    <string name="nombrepatadaazul2">Furio Chagui</string>
    <string name="patadaazul2">\n
            Se realiza del interior al exterior.\n
            Golpea con la plata del pie.</string>
    <string name="nombrepatadaazul3">Tuio Ap Chagui</string>
    <string name="patadaazul3">\n
            Ap Chagui en salto.</string>
    <string name="nombrepatadaazul4">Tuio Yop Chagui</string>
    <string name="patadaazul4">\n
            Yop Chagui en salto.</string>
    <string name="nombrepatadaazul5">Tuio Dollyo Chagui</string>
    <string name="patadaazul5">\n
            Dollyo Chagui en salto.</string>
</resources>