<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/azulpatadas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jessi.tae.azulpatadasActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo2">

            <!--boton volver superior -->
            <ImageButton
                android:id="@+id/botonvolver1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView1"
                android:layout_alignRight="@+id/textView1"
                android:layout_alignTop="@+id/textViewTitulo"
                android:onClick="Volver"
                android:text="Volver a azul"
                android:background="@drawable/boton_redondo"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <!--patadaes-->
            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView1"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/imageView1"
                android:background="@color/azul"
                android:fontFamily="@font/turtles"
                android:layout_marginTop="@dimen/margen1"
                android:paddingLeft="@dimen/margen4"
                android:paddingRight="@dimen/margen4"
                android:text="@string/titulopatadaazul"
                android:textColor="@color/colorsubtitulo"
                android:textSize="@dimen/tamanosubtitulo" />

            <!-- 01 -->
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margen2"
                android:layout_marginStart="@dimen/margen2"
                android:layout_marginTop="@dimen/margen6"
                app:srcCompat="@drawable/patadaazul1" />

            <TextView
                android:id="@+id/textViewSubtitulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignStart="@+id/textView1"
                android:layout_alignTop="@+id/imageView1"
                android:fontFamily="@font/turtles"
                android:text="@string/nombrepatadaazul1"
                android:textColor="@color/colorsubtitulo"
                android:textSize="@dimen/tamanotecnica" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewSubtitulo1"
                android:layout_marginLeft="@dimen/margen2"
                android:layout_marginRight="@dimen/margen2"
                android:layout_toEndOf="@+id/imageView1"
                android:layout_toRightOf="@+id/imageView1"
                android:fontFamily="@font/courier"
                android:text="@string/patadaazul1"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />

            <!-- 02 -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView1"
                android:layout_alignStart="@+id/imageView1"
                android:layout_below="@+id/imageView1"
                android:layout_marginTop="@dimen/margen5"
                app:srcCompat="@drawable/patadaazul2" />

            <TextView
                android:id="@+id/textViewSubtitulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView2"
                android:layout_marginLeft="@dimen/margen2"
                android:layout_marginRight="@dimen/margen2"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:fontFamily="@font/turtles"
                android:text="@string/nombrepatadaazul2"
                android:textColor="@color/colorsubtitulo"
                android:textSize="@dimen/tamanotecnica" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView2"
                android:layout_marginLeft="@dimen/margen2"
                android:layout_marginRight="@dimen/margen2"
                android:layout_marginTop="31dp"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:fontFamily="@font/courier"
                android:text="@string/patadaazul2"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />

            <!-- 03 -->
            <TextView
                android:id="@+id/textViewSubtitulo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView2"
                android:layout_alignStart="@+id/imageView2"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/turtles"
                android:text="@string/nombrepatadaazul3"
                android:textColor="@color/colorsubtitulo"
                android:textSize="@dimen/tamanotecnica" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textViewSubtitulo3"
                android:fontFamily="@font/courier"
                android:text="@string/patadaazul3"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />

            <!-- 04 --><TextView
            android:id="@+id/textViewSubtitulo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewSubtitulo3"
            android:layout_alignStart="@+id/textViewSubtitulo3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/turtles"
            android:text="@string/nombrepatadaazul4"
            android:textColor="@color/colorsubtitulo"
            android:textSize="@dimen/tamanotecnica" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewSubtitulo5"
                android:layout_alignStart="@+id/textViewSubtitulo5"
                android:layout_below="@+id/textViewSubtitulo4"
                android:fontFamily="@font/courier"
                android:text="@string/patadaazul4"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />

            <!-- 05 -->
            <TextView
                android:id="@+id/textViewSubtitulo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewSubtitulo4"
                android:layout_alignStart="@+id/textViewSubtitulo4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/turtles"
                android:text="@string/nombrepatadaazul5"
                android:textColor="@color/colorsubtitulo"
                android:textSize="@dimen/tamanotecnica" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewSubtitulo5"
                android:layout_alignStart="@+id/textViewSubtitulo5"
                android:layout_below="@+id/textViewSubtitulo5"
                android:fontFamily="@font/courier"
                android:text="@string/patadaazul5"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />

            <!--boton volver inferior -->
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textViewSubtitulo5"
                android:layout_marginTop="11dp"
                android:background="@drawable/boton_redondo"
                android:onClick="Volver"
                app:srcCompat="?attr/actionModeCloseDrawable" />


        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navazul"
        app:headerLayout="@layout/header"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="@color/colorAccent"
        app:itemTextColor="@color/colorPrimary"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
