<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/terminologia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jessi.tae.terminologiaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo2">

            <!--Basico-->
            <TextView
                android:id="@+id/textViewTitulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margen2"
                android:fontFamily="@font/capture_it"
                android:textColor="@color/colortitulo"
                android:textSize="@dimen/tamanotitulo"
                android:text="@string/terminologiabasica" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTitulo1"
                android:layout_margin="@dimen/margen2"
                android:fontFamily="@font/courier"
                android:textColor="@color/base"
                android:textSize="@dimen/base"
                android:text="@string/terminologiabasica1"/>

            <!--Competicion-->
            <TextView
                android:id="@+id/textViewTitulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margen2"
                android:fontFamily="@font/capture_it"
                android:text="@string/terminologiacompeticion"
                android:textColor="@color/colortitulo"
                android:textSize="@dimen/tamanotitulo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignStart="@+id/textView1"
                android:layout_below="@+id/textViewTitulo2"
                android:layout_margin="@dimen/margen2"
                android:fontFamily="@font/courier"
                android:text="@string/terminologiacompeticion1"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />

            <!--Numeros-->

            <!--Competicion-->
            <TextView
                android:id="@+id/textViewTitulo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margen2"
                android:fontFamily="@font/capture_it"
                android:text="@string/terminologianumeros"
                android:textColor="@color/colortitulo"
                android:textSize="@dimen/tamanotitulo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textViewTitulo3"
                android:layout_margin="@dimen/margen2"
                android:fontFamily="@font/courier"
                android:text="@string/terminologianumeros1"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignEnd="@+id/textViewTitulo1"
                android:layout_alignRight="@+id/textViewTitulo1"
                android:fontFamily="@font/courier"
                android:text="@string/terminologianumeros2"
                android:textColor="@color/base"
                android:textSize="@dimen/base" />
            <!--<ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:src="@drawable/saludo_opt" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_margin="@dimen/margen2"
                android:fontFamily="@font/courier"
                android:textColor="@color/base"
                android:textSize="@dimen/base"
                android:text="@string/saludo2"/>-->

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navTerminologia"
        app:headerLayout="@layout/header"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="@color/colorAccent"
        app:itemTextColor="@color/colorPrimary"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
