<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/federaciones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jessi.tae.federacionesActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo2">

                <TextView
                    android:id="@+id/textViewTitulo0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/margen1"
                    android:fontFamily="@font/capture_it"
                    android:textColor="@color/colortitulo"
                    android:textSize="@dimen/tamanotitulo"
                    android:text="@string/federacion" />
                <!--01-->
                <TextView
                    android:id="@+id/textViewTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textViewTitulo0"
                    android:layout_margin="@dimen/margen1"
                    android:fontFamily="@font/capture_it"
                    android:textColor="@color/colorsubtitulo"
                    android:textSize="@dimen/tamanosubtitulo"
                    android:text="@string/federacion1" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTitulo"
                    android:layout_margin="@dimen/margen2"
                    android:fontFamily="@font/courier"
                    android:textColor="@color/base"
                    android:textSize="@dimen/base"
                    android:text="@string/federaciontexto1" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:src="@drawable/federacion1" />

                <!--02-->
                <TextView
                    android:id="@+id/textViewTitulo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/imageView1"
                    android:layout_margin="@dimen/margen1"
                    android:fontFamily="@font/capture_it"
                    android:textColor="@color/colorsubtitulo"
                    android:textSize="@dimen/tamanosubtitulo"
                    android:text="@string/federacion2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTitulo2"
                    android:layout_margin="@dimen/margen2"
                    android:fontFamily="@font/courier"
                    android:textColor="@color/base"
                    android:textSize="@dimen/base"
                    android:text="@string/federaciontexto2" />


                <!--03-->
                <TextView
                    android:id="@+id/textViewTitulo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textView2"
                    android:layout_margin="@dimen/margen1"
                    android:fontFamily="@font/capture_it"
                    android:textColor="@color/colorsubtitulo"
                    android:textSize="@dimen/tamanosubtitulo"
                    android:text="@string/federacion3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTitulo3"
                    android:layout_margin="@dimen/margen2"
                    android:fontFamily="@font/courier"
                    android:textColor="@color/base"
                    android:textSize="@dimen/base"
                    android:text="@string/federaciontexto3" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:src="@drawable/federacion2" />



            </RelativeLayout>
        </ScrollView>


    <android.support.design.widget.NavigationView
        android:id="@+id/navFederaciones"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:background="@color/colorAccent"
        app:headerLayout="@layout/header"
        app:itemTextColor="@color/colorPrimary"
        app:menu="@menu/drawermenu"></android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
